🔨 fix meta flex wrap

--- a/style.css
+++ b/style.css
@@ -394,6 +394,7 @@ main > .featured article a.title:hover {
 main > .featured article .meta {
 	display: flex;
 	gap: 1.5rem;
+	flex-wrap: wrap;
 }
 main > .featured article .meta > * {
 	color: var(--c-primary-light);
@@ -480,6 +481,7 @@ main.post .content .meta {
 	margin-bottom: 3rem;
 	display: flex;
 	gap: 1.5rem;
+	flex-wrap: wrap;
 }
 main.post .content .meta > * {
 	color: var(--c-primary-dark-accent);
@@ -541,6 +543,9 @@ main.post .comments .comment > h3 {
 	font-size: 1rem;
 	margin: 0;
 	grid-area: meta;
+	display: flex;
+	gap: .5rem;
+	flex-wrap: wrap;
 }
 main.post .comments .comment > blockquote {
 	margin: 0;
@@ -628,7 +633,4 @@ main.post .comments .comment-form > p:not(:first-child):not(:last-child):not(.co
 }
 .ml-auto {
 	margin-left: auto;
-}
-.float-right {
-	float: right;
 }
